--- a/concerto.csproj
+++ b/concerto.csproj
@@ -6,6 +6,9 @@
     <Nullable>enable</Nullable>
     <RootNamespace>LowLevelDesign.Concerto</RootNamespace>
     <LangVersion>8</LangVersion>
+    <Company>Sebastian Solnica (@lowleveldesign)</Company>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
