--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       with:
         dotnet-version: '3.0.100' # SDK Version to use.
     
-    - run: dotnet publish -r linux-x64 -c release
+    - run: CppCompilerAndLinker=clang dotnet publish -r linux-x64 -c release
 
     - uses: actions/upload-artifact@master
       with:
