--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       with:
         dotnet-version: '3.0.100' # SDK Version to use.
     
-    - run: sudo apt-get update && apt-get install git clang-3.9 cmake make libc6-dev libssl-dev libkrb5-dev libcurl4-openssl-dev zlib1g-dev
+    - run: sudo apt-get update && sudo apt-get install git clang-3.9 cmake make libc6-dev libssl-dev libkrb5-dev libcurl4-openssl-dev zlib1g-dev
 
     - run: dotnet publish -r linux-x64 -c release
       working-directory: ./ConcertoCLI
