--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,62 +8,62 @@ jobs:
     runs-on: windows-latest
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@main
       with:
         fetch-depth: 1
 
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.0.100' # SDK Version to use.
+        dotnet-version: '3.1.x' # SDK Version to use.
     
     - run: dotnet publish -r win-x64 -c release
       working-directory: ./ConcertoCLI
 
-    - uses: actions/upload-artifact@master
+    - uses: actions/upload-artifact@main
       with:
         name: concerto-win64
-        path: ConcertoCLI/bin/release/netcoreapp3.0/win-x64/native
+        path: ConcertoCLI/bin/release/netcoreapp3.1/win-x64/native
 
   build-linux:
 
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@main
       with:
         fetch-depth: 1
 
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.0.100' # SDK Version to use.
+        dotnet-version: '3.1.x' # SDK Version to use.
     
     - run: sudo apt-get update && sudo apt-get install git clang-3.9 cmake make libc6-dev libssl-dev libkrb5-dev libcurl4-openssl-dev zlib1g-dev
 
     - run: dotnet publish -r linux-x64 -c release
       working-directory: ./ConcertoCLI
 
-    - uses: actions/upload-artifact@master
+    - uses: actions/upload-artifact@main
       with:
         name: concerto-linux64
-        path: ConcertoCLI/bin/release/netcoreapp3.0/linux-x64/native
+        path: ConcertoCLI/bin/release/netcoreapp3.1/linux-x64/native
 
   build-macosx:
 
     runs-on: macos-latest
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@main
       with:
         fetch-depth: 1
 
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.0.100' # SDK Version to use.
+        dotnet-version: '3.1.x' # SDK Version to use.
     
     - run: dotnet publish -r osx-x64 -c release
       working-directory: ./ConcertoCLI
 
-    - uses: actions/upload-artifact@master
+    - uses: actions/upload-artifact@main
       with:
         name: concerto-macos64
-        path: ConcertoCLI/bin/release/netcoreapp3.0/osx-x64/native
+        path: ConcertoCLI/bin/release/netcoreapp3.1/osx-x64/native
