--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,15 +14,15 @@ jobs:
 
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.x' # SDK Version to use.
+        dotnet-version: '5.0.x' # SDK Version to use.
     
-    - run: dotnet publish -r win-x64 -c release
+    - run: dotnet publish -c release -r win-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true  -p:IncludeNativeLibrariesForSelfExtract=true
       working-directory: ./ConcertoCLI
 
     - uses: actions/upload-artifact@main
       with:
         name: concerto-win64
-        path: ConcertoCLI/bin/release/netcoreapp3.1/win-x64/native
+        path: ConcertoCLI/bin/release/net5.0/win-x64/publish
 
   build-linux:
 
@@ -35,17 +35,15 @@ jobs:
 
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.x' # SDK Version to use.
-    
-    - run: sudo apt-get update && sudo apt-get install git clang-3.9 cmake make libc6-dev libssl-dev libkrb5-dev libcurl4-openssl-dev zlib1g-dev
+        dotnet-version: '5.0.x' # SDK Version to use.
 
-    - run: dotnet publish -r linux-x64 -c release
+    - run: dotnet publish -c release -r linux-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true  -p:IncludeNativeLibrariesForSelfExtract=true
       working-directory: ./ConcertoCLI
 
     - uses: actions/upload-artifact@main
       with:
         name: concerto-linux64
-        path: ConcertoCLI/bin/release/netcoreapp3.1/linux-x64/native
+        path: ConcertoCLI/bin/release/net5.0/linux-x64/publish
 
   build-macosx:
 
@@ -58,12 +56,12 @@ jobs:
 
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.x' # SDK Version to use.
+        dotnet-version: '5.0.x' # SDK Version to use.
     
-    - run: dotnet publish -r osx-x64 -c release
+    - run: dotnet publish -c release -r osx-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true  -p:IncludeNativeLibrariesForSelfExtract=true
       working-directory: ./ConcertoCLI
 
     - uses: actions/upload-artifact@main
       with:
         name: concerto-macos64
-        path: ConcertoCLI/bin/release/netcoreapp3.1/osx-x64/native
+        path: ConcertoCLI/bin/release/net5.0/osx-x64/publish
