--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,31 +6,8 @@ on:
       - '*'
 
 jobs:
-  build-windows:
 
-    runs-on: windows-latest
-    
-    steps:
-    - uses: actions/checkout@main
-      with:
-        fetch-depth: 1
-
-    - uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '5.0.x' # SDK Version to use.
-
-    - run: scripts/Update-AssemblyInfoVersionFiles.ps1
-      shell: pwsh
-    
-    - run: dotnet publish -c release -r win-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true  -p:IncludeNativeLibrariesForSelfExtract=true
-      working-directory: ./ConcertoCLI
-
-    - uses: actions/upload-artifact@main
-      with:
-        name: concerto-win64
-        path: ConcertoCLI/bin/release/net5.0/win-x64/publish
-
-  build-linux:
+  build-all:
 
     runs-on: ubuntu-latest
     
@@ -43,7 +20,9 @@ jobs:
       with:
         dotnet-version: '5.0.x' # SDK Version to use.
 
-    - run: scripts/Update-AssemblyInfoVersionFiles.ps1
+    - run: |
+        Invoke-WebRequest -OutFile Update-AssemblyInfoVersionFiles.ps1 https://gist.githubusercontent.com/lowleveldesign/663de4e0d5a071f938e6f7c82d7ca9a0/raw/Update-AssemblyInfoVersionFiles.ps1
+        ./Update-AssemblyInfoVersionFiles.ps1
       shell: pwsh
 
     - run: dotnet build -c release
@@ -57,31 +36,23 @@ jobs:
     - run: dotnet publish -c release -r linux-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true  -p:IncludeNativeLibrariesForSelfExtract=true
       working-directory: ./ConcertoCLI
 
-    - uses: actions/upload-artifact@main
-      with:
-        name: concerto-linux64
-        path: ConcertoCLI/bin/release/net5.0/linux-x64/publish
+    - run: dotnet publish -c release -r osx-x64 -f netcoreapp3.1 -p:PublishSingleFile=true -p:PublishTrimmed=true
+      working-directory: ./dotnet-wtrace
 
-  build-macosx:
-
-    runs-on: macos-latest
-    
-    steps:
-    - uses: actions/checkout@main
-      with:
-        fetch-depth: 1
-
-    - uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '5.0.x' # SDK Version to use.
-
-    - run: scripts/Update-AssemblyInfoVersionFiles.ps1
-      shell: pwsh
-    
-    - run: dotnet publish -c release -r osx-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true  -p:IncludeNativeLibrariesForSelfExtract=true
-      working-directory: ./ConcertoCLI
+    - run: dotnet publish -c release -r win-x64 -f netcoreapp3.1 -p:PublishSingleFile=true -p:PublishTrimmed=true
+      working-directory: ./dotnet-wtrace
 
     - uses: actions/upload-artifact@main
       with:
-        name: concerto-macos64
-        path: ConcertoCLI/bin/release/net5.0/osx-x64/publish
+        name: dotnet-wtrace-linux
+        path: dotnet-wtrace/bin/release/netcoreapp3.1/linux-x64/publish
+
+    - uses: actions/upload-artifact@main
+      with:
+        name: dotnet-wtrace-windows
+        path: dotnet-wtrace/bin/release/netcoreapp3.1/win-x64/publish
+
+    - uses: actions/upload-artifact@main
+      with:
+        name: dotnet-wtrace-osx
+        path: dotnet-wtrace/bin/release/netcoreapp3.1/osx-x64/publish
